--- a/style.css
+++ b/style.css
@@ -1,30 +1,41 @@
 @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'Share Tech Mono', monospace;
   background: #121212;
   color: #f0f0f0;
-  padding: 20px;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card {
+  background: #1e1e1e;
+  padding: 30px;
+  border-radius: 12px;
+  width: 50%;
+  height: 100vh;
+  box-shadow: 0 0 20px rgba(255, 0, 0, 0.2);
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
+  overflow-y: auto;
 }
 
 h1 {
   color: #ff4b4b;
   text-shadow: 0 0 5px #ff0000aa;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   font-size: 24px;
   text-align: center;
-}
-
-.card {
-  background: #1e1e1e;
-  padding: 20px;
-  border-radius: 12px;
-  width: 100%;
-  max-width: 350px;
-  box-shadow: 0 0 20px rgba(255, 0, 0, 0.2);
 }
 
 .card h2 {
@@ -33,12 +44,14 @@ h1 {
   margin-bottom: 20px;
   border-bottom: 1px solid #ff4b4b55;
   padding-bottom: 10px;
+  text-align: center;
 }
 
 .campo {
   display: flex;
   flex-direction: column;
   margin-bottom: 15px;
+  width: 100%;
 }
 
 .campo label {
@@ -83,7 +96,6 @@ button:hover {
   border-radius: 8px;
   box-shadow: 0 0 10px #ff000033;
   width: 100%;
-  max-width: 350px;
   text-align: center;
 }
 
@@ -93,19 +105,20 @@ button:hover {
   color: #ffffff;
 }
 
-/* RESPONSIVO */
-@media screen and (max-width: 700px) {
-  body {
-    padding: 10px;
+/* Responsivo */
+@media screen and (max-width: 800px) {
+  .card {
+    width: 90%;
+    padding: 20px;
+    height: auto;
   }
 
   h1 {
     font-size: 20px;
   }
 
-  .card, .resultado {
-    padding: 15px;
-    font-size: 14px;
+  .card h2 {
+    font-size: 16px;
   }
 
   input[type="time"] {
